# sentiment_analysis_backend

./: .gitignore  Dockerfile  PERFORMANCE_OPTIMIZATION.md  README.md  dockerFile  main.py  pyproject.toml  requirements.txt  routers.py
src/: analysis.py  database.py  firecrawl_retriever.py  models.py  retriever.py  services.py
